--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<! Scarica file CSV nella cartella Download del PC o del cellulare>
+
 <!DOCTYPE html>
 <html lang="it">
 <head>
@@ -116,7 +118,6 @@
             'Agatha Quinto 12',
             'Agnese Sbetti 13',
             'Anna Pucciarelli 13',
-            'Anna Rossato 11',
             'Beatrice Francescatti 12',
             'Camilla Tamanini 12',
             'Caterina Pasquini 12',
@@ -126,12 +127,10 @@
             'Elisabeth Tomcsik 12',
             'Ester Luciani 12',
             'Francesca Nicetto 13',
-            'Ginevra Bovesi 12',
             'Giorgia Ochner 13',
             'Greta Famularo 12',
             'Matilde Bassi 12',
             'Maya Di Giulio 13',
-            'Nihal Badreddine 11',
             'Sofia Casagrande 13'
         ];
 
